Community: fix mobile width overflow

--- a/packages/thicket-webapp/src/App/Communities/Communities.css
+++ b/packages/thicket-webapp/src/App/Communities/Communities.css
@@ -35,6 +35,7 @@
 
 .communities__element{
   height: 15em;
+  overflow: hidden;
 }
 
 .communities__link{
